--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="/src//style//components.css">
+  <link rel="stylesheet" href="./src//style//index.css">
+  <link rel="stylesheet" href="./src//App.css">
 
   <!-- fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
